--- a/ESTADISTICA/pruebavisualizacion.html
+++ b/ESTADISTICA/pruebavisualizacion.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script type="text/javascript" src="trabajofinal.js"></script>
+    <script type="text/javascript" src="TrabajoFinal.js"></script>
     <script type="text/javascript">
 	
       google.charts.load('current', {'packages':['bar']});
@@ -9,7 +9,7 @@
 
       function drawChart() {
         var data = new google.visualization.DataTable();
-          data.addColumn('string', 'Años');
+          data.addColumn('string', 'AÃ±os');
           data.addColumn('number', 'Nacimiento Hombres');
 		  data.addColumn('number', 'Nacimiento Mujeres');
           data.addColumn('number', 'Indice de Fecundidad');
@@ -30,7 +30,7 @@
         var options = {
           chart: {
             title: 'Natalidad', 
-			subtitle: 'en España'
+			subtitle: 'en EspaÃ±a'
           },
           bars: 'vertical' 
         };
